manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openshift-s2i-demo
  labels:
    app: openshift-s2i-demo
spec:
  selector:
    app: openshift-s2i-demo
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
