manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openshift-s2i-demo
  labels:
    app: openshift-s2i-demo
spec:
  to:
    kind: Service
    name: openshift-s2i-demo
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
